--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 <div class="container">
   <div class="card">
     <h2>Login</h2>
-    <p class="notice">Admin: <b>admin</b> / <b>1234</b>. Renters use the User ID & Password set by admin.</p>
+    <p class="notice">Admin: <b>Enter details</b> / <b>Lets start</b>. Renters use the User ID & Password set by admin.</p>
     <div class="form-grid">
       <input id="uid" placeholder="User ID (admin or renter ID)">
       <input id="pwd" placeholder="Password" type="password">
